syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

message OfferContacts {
	// Email (pouze pro účel nabídky)
	string EmailForOffer = 1;

	// Telefon (pouze pro účel nabídky)
	Phone PhoneNumberForOffer = 2;
}

message Phone {
	string PhoneNumber = 1;
	string PhoneIDC = 2;
}